# ValueBarTest

./: .gitmodules  CMakeLists.txt  DisplayCb.cpp  DisplayCb.h  EncCallbacks.cpp  EncCallbacks.h  README.md  TextField.cpp  TextField.h  ValueBarDrawer.cpp  ValueBarDrawer.h  ValueDrawer.cpp  ValueDrawer.h  ValueUtils.h  main.cpp  utils.h
FreeCADModel/: valueBarSim.fcstd  valueBarSim.fcstd1
GraphicWidgets/: CMakeLists.txt  TextField.cpp  TextField.h  ValueBarDrawer.cpp  ValueBarDrawer.h
Topology/: WidgetTopology.json  valueBarSim.fcstd
